Finished the game

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,14 +11,13 @@
     <section id="topContainer">
         <div id ="top">
             <h1>Word Guess Game</h1>
-            <button id="start-btn">Start</button>
+            <button id="start-btn" onclick="startBtnClick()">Start</button>
         </div>
     </section>
 
     <section id="bottomContainer">
         <div id="row">
             <div id="first-box">
-                <h2 id="word"></h2>
             </div>
 
             <div id="second-box">
